Upgrade to Java 16, add more tests